# DeepCode

./: README.md  Taskfile.yml  pyproject.toml
.github/: README.md  pull_request_template.md
cli/: README.md
config/: README.md
logs/: mcp-agent-20251224_154007.jsonl
prompts/: README.md
schema/: README.md
tools/: README.md
ui/: README.md  components.py  handlers.py  layout.py
utils/: README.md
workflows/: README.md
