[project]
name = "deepcode-hku"
version = "1.0.8"
description = "AI Research Engine - Transform research papers into working code automatically"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "DeepCode Team" }]
urls = { Repository = "https://github.com/HKUDS/DeepCode" }
dependencies = [
    "aiofiles>=0.8.0",
    "aiohttp>=3.8.0",
    "anthropic",
    "asyncio-mqtt",
    "docling",
    "google-genai",
    "mcp-agent",
    "mcp-server-git",
    "nest_asyncio",
    "openai",
    "pathlib2",
    "PyPDF2>=2.0.0",
    "reportlab>=3.5.0",
    "streamlit",
]

[project.scripts]
deepcode = "deepcode:main"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["deepcode"]
packages = [
    "cli",
    "config",
    "prompts",
    "schema",
    "tools",
    "ui",
    "utils",
    "workflows",
]

[dependency-groups]
dev = ["ruff"]
